# surf-mcp

./: .gitignore  README.md  pyproject.toml
src/surf/: __init__.py  server.py  stormglass_api.py  tools.py
