[project]
name = "surf-mcp"
version = "0.1.0"
description = "MCP surf project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "python-dotenv>=1.0.1",
    # add other dependencies your project needs
]

[[project.authors]]
name = "Ravina Patel"
email = "ravinapatel738@gmail.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
surf-mcp = "surf:main"

[tool.hatch.build.targets.wheel]
packages = ["src/surf"]

[dependency-groups]
dev = [
    "surf-mcp",
]

[tool.uv.sources]
surf-mcp = { workspace = true }
